# RAG_Tutorial_for_Data

./: .gitignore  1.0_RAG_With_Own_Text.ipynb  README.md  main.py  pyproject.toml
