[project]
name = "rag-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.1",
    "langchain-openai>=1.2.2",
    "openai>=2.41.0",
    "pypdf>=6.13.0",
]
